[gd_scene load_steps=4 format=3 uid="uid://cwa5r6we5q7sf"]

[ext_resource type="Script" path="res://ui/inventory.gd" id="1_fikyh"]
[ext_resource type="Texture2D" uid="uid://ilwq54hsw0p0" path="res://assets/ui/inventory.png" id="2_84jk4"]
[ext_resource type="AudioStream" uid="uid://wvvf8424vd3o" path="res://assets/sfx/inv_drop.wav" id="2_yq82q"]

[node name="Inventory" type="CanvasLayer"]
script = ExtResource("1_fikyh")

[node name="BoxContainer" type="BoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -228.0
offset_right = 448.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="BoxContainer"]
position = Vector2(448, 224)
scale = Vector2(7, 7)
texture = ExtResource("2_84jk4")

[node name="InvLabel" type="RichTextLabel" parent="."]
offset_left = 192.0
offset_top = 120.0
offset_right = 272.0
offset_bottom = 144.0
text = "Inventory"

[node name="Inv" type="GridContainer" parent="."]
unique_name_in_owner = true
offset_left = 192.0
offset_top = 152.0
offset_right = 960.0
offset_bottom = 312.0
columns = 5

[node name="SelectedItemsLabel" type="RichTextLabel" parent="."]
offset_left = 192.0
offset_top = 352.0
offset_right = 272.0
offset_bottom = 376.0
text = "Selected"

[node name="SelectedItems" type="GridContainer" parent="."]
unique_name_in_owner = true
offset_left = 192.0
offset_top = 384.0
offset_right = 960.0
offset_bottom = 512.0
columns = 3

[node name="DropSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_yq82q")
volume_db = -15.0

[node name="OpenCloseSfx" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[node name="SelectButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 815.0
offset_top = 467.0
offset_right = 999.0
offset_bottom = 518.0
disabled = true
text = "Prepare for Selection"
